Added a Reveal function to the Mod-able Mojo Base.  This will check the signature, and if they are owner of the token in the wallet before revealing (Sprouting)

--- a/serverless.yml
+++ b/serverless.yml
@@ -151,6 +151,12 @@ functions:
             #      - httpApi:
             #          path: /mod-able-mojo/action/updateNotSecure
             #          method: post 
+  revealModableMojo: 
+    handler: mojo.revealModableMojo
+    events:
+      - httpApi:
+          path: /mod-able-mojo-base/action/reveal
+          method: post 
   getMojoSeed: 
     handler: mojoSeed.getMojoSeed
     events:
